<resources>
    <string name="app_name">Travel Companion</string>
    <string name="google_app_id">264982185169</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Travel Companion</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_personal_info">Personal Info</string>
    <string name="TAP_FOR_DIRECTIONS">TAP FOR DIRECTIONS</string>
    <string name="find_more_attractions_button_text">Find More Attractions Near Me</string>
    <string name="powered_by_google_image_text">powered by google icon</string>
    <string name="emergency_info_for_text">Emergency Information for</string>
    <string name="call_police_button_text">Call Police</string>
    <string name="call_amb_button_text">Call Ambulance</string>
    <string name="call_fire_button_text">Call Fire Services</string>
    <string name="icon_button_text">app icon</string>
    <string name="please_wait_text">Please Wait...</string>
    <string name="email_textview">Email</string>
    <string name="password_textview">Password</string>
    <string name="login_textview">Log In</string>
    <string name="signup_textview">Sign Up</string>
    <string name="safetravelbuttonstring">Safe Travel</string>
    <string name="attractionsbuttonstring">Attractions</string>
    <string name="weatherbuttonstring">Weather</string>
    <string name="pinfobuttonstring">Personal Info</string>
    <string name="welcometotextstring">Welcome to</string>
    <string name="emergencyservicesstring">Emergency Services</string>
    <string name="logoutbuttonstring">Log Out</string>
    <string name="mapsearchbarhinttext">Find location</string>
    <string name="submitwarningbuttontext">Submit Warning</string>
    <string name="personalinfotitletext">Personal Info</string>
    <string name="firstnamedisplaytext">First Name:</string>
    <string name="surnamedisplaytext">Surname:</string>
    <string name="phonenumberdislaytext">Phone number:</string>
    <string name="nextofkin_displaytext">Next Of Kin:</string>
    <string name="kincontactdisplaytext">Kin Contact Info:</string>
    <string name="na1">N/A</string>
    <string name="na2">N/A</string>
    <string name="na3">N/A</string>
    <string name="na4">N/A</string>
    <string name="na5">N/A</string>
    <string name="editbuttonstring">Edit</string>
    <string name="personalinfoedittext">Personal Info</string>
    <string name="firstnameedittext">First Name:</string>
    <string name="surnameedittext">Surname:</string>
    <string name="phonenumberedittext">Phone number:</string>
    <string name="nextofkinedittext">Next Of Kin:</string>
    <string name="kincontactedittext">Kin Contact Info:</string>
    <string name="savebuttonstring">Save</string>
    <string name="nameentertext">Name</string>
    <string name="emailentertext">Email</string>
    <string name="passwordentertext">Password</string>
    <string name="reenterpasswordtext">Reenter Password</string>
    <string name="signupbuttontext">Sign Up</string>
    <string name="registertext">Register</string>
    <string name="findareatoreporttxt">Find area you wish to report</string>
    <string name="warningentertext">Warning Type</string>
    <string name="detaileddescriptiontext">Detailed Description</string>
    <string name="submitawarningbuttontext">Submit</string>
    <string name="findweathertext">Find Weather For Location</string>
    <string name="developertext">Developers</string>
    <string name="titletext">Travel Companion</string>
    <string name="humidity_field">"Humidity: "</string>
    <string name="noweathertext">No Weather Available Here</string>
    <string name="humiditytext1">"Humidity: "</string>
    <string name="humiditytext2">"Humidity: "</string>
    <string name="assault">Assault</string>
    <string name="burglary">Burglary</string>
    <string name="theft">Theft</string>
    <string name="other">Other</string>
    <string name="youhaveenteredawarningarea">You have entered a warning area.</string>
    <string name="safetravel">Safe Travel</string>
    <string name="pleaseenteremailaddress">Please enter your email address</string>
    <string name="loggedout">Logged Out</string>
    <string name="loggedin">Logged In</string>
    <string name="passwordsdontmatch">Passwords dont match</string>
    <string name="notavalidemail">Not a valid Email address</string>
    <string name="nolocationselected">No Location Selected</string>
    <string name="enterapassword">Please enter a password</string>
    <string name="entername">Please enter your name</string>
    <string name="changelanguagetext">Change Language</string>
    <string name="selectalanguagetext">Select a Language</string>
    <string name="engbutton">English</string>
    <string name="frenchbutton">French</string>
    <string name="spainbutton">Spanish</string>
</resources>
