<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameentertext"
        android:id="@+id/TFname"
        android:singleLine="true"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailentertext"
        android:id="@+id/TFemail"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TFname"
        android:inputType="textEmailAddress"
        android:singleLine="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwordentertext"
        android:id="@+id/TFpass1"
        android:layout_alignParentStart="true"
        android:singleLine="true"
        android:layout_below="@+id/TFemail" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/reenterpasswordtext"
        android:id="@+id/TFpass2"
        android:layout_below="@+id/TFpass1"
        android:singleLine="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signupbuttontext"
        android:id="@+id/Bsignupbutton"
        android:layout_gravity="center_horizontal"
        android:onClick="onSignupClick"
        android:layout_below="@+id/TFpass2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/registertext"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

</RelativeLayout>
