<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmergencyServices">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emergency_info_for_text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/location_text"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/call_police_button_text"
        android:id="@+id/call_police_button"
        android:layout_below="@+id/location_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/call_amb_button_text"
        android:id="@+id/call_ambulance_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/call_police_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:text="@string/call_fire_button_text"
        android:id="@+id/call_fire_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/call_ambulance_button"
        android:layout_alignStart="@+id/call_ambulance_button" />

</RelativeLayout>
