<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="glen.dan.travelapp.PersonalInfoEdit">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/firstnameedittext"
                android:id="@+id/textView9"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_et"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/surnameedittext"
                android:id="@+id/textView10"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/surname_et"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phonenumberedittext"
                android:id="@+id/textView11"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/phone_et"
                android:inputType="phone"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nextofkinedittext"
                android:id="@+id/textView12"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/kin_et"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kincontactedittext"
                android:id="@+id/textView13"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/kin_contact_et"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savebuttonstring"
                android:id="@+id/save_button"
                android:onClick="onButtonClick"
                android:layout_marginTop="29dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
