<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="363dp"
    android:layout_height="270dp"
    tools:context=".SubmitWarningActivity" />


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp"
        android:id="@+id/frameLayout">


        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/autocomplete1"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/findareatoreporttxt" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/frameLayout"
            android:layout_gravity="right|center_vertical"
            android:layout_alignParentEnd="true"
            android:src="@drawable/clear_button"
            android:onClick="onButtonClick"
            android:background="#ffffff"
            android:layout_marginTop="-4dp" />

    </FrameLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/warningentertext"
            android:id="@+id/textView" />

    </LinearLayout>

    <Spinner
        android:id="@+id/dropdownmenu"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detaileddescriptiontext"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:id="@+id/description_field" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitawarningbuttontext"
        android:id="@+id/submit_button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

</ScrollView>